fix pre overflow on phones

--- a/style.css
+++ b/style.css
@@ -29,3 +29,6 @@ h1>a:hover,h2>a:hover,h3>a:hover,h4>a:hover,h5>a:hover,h6>a:hover{
 #posts{
     width:100%;
 }
+pre{
+    overflow:auto;
+}
